force-app/main/default/objects/Trail_Module__c/fields/ModuleId__c.field-meta.xml
<CustomField>
    <fullName>ModuleId__c</fullName>
    <label>ModuleId</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Trails/Modules</relationshipLabel>
    <relationshipName>Trails_Modules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>