force-app/main/default/objects/Trail_Module__c/fields/TrailId__c.field-meta.xml
<CustomField>
    <fullName>TrailId__c</fullName>
    <label>TrailId</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Trails/Modules</relationshipLabel>
    <relationshipName>Trails_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>