force-app/main/default/objects/Trail_Module__c/validationRules/Module_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Module_Active</fullName>
    <active>true</active>
    <errorConditionFormula>ModuleId__r.IsActive__c = false</errorConditionFormula>
    <errorMessage>The module must be in &apos;Active&apos; status</errorMessage>
</ValidationRule>